Add atom pack to generate a feed.

--- a/site.yaml
+++ b/site.yaml
@@ -3,6 +3,9 @@ subtitle: "A web place for Calvin Spealman"
 packs:
 - "jules:html5boilerplate"
 - "jules:lesscss"
+- "jules:atom"
 - "dir:static"
 - "dir:contents"
 google_analytics_id: "UA-953592-18"
+domain: "www.ironfroggy.com"
+default_author: "Calvin Spealman <ironfroggy@gmail.com>"
