--- a/site.yaml
+++ b/site.yaml
@@ -1,4 +1,4 @@
-title: "Developing Upwards"
+title: "www.ironfroggy.com"
 subtitle: "A web place for Calvin Spealman"
 packs:
 - "jules:html5boilerplate"
