--- a/contents/what-i-want-in-a-website.yaml
+++ b/contents/what-i-want-in-a-website.yaml
@@ -3,8 +3,7 @@ publish_time: !!timestamp '2012-06-23 11:40:00'
 created_time: !!timestamp '2012-03-04 22:23:00'
 status: published
 tags:
-- essay
-- about me
+- musing
 render: jinja2
 template: post.j2
 content: "~/me.git/what-i-want-in-a-website"
