--- a/site.yaml
+++ b/site.yaml
@@ -4,6 +4,7 @@ packs:
 - "jules:html5boilerplate"
 - "jules:lesscss"
 - "jules:atom"
+- "jules:pygments"
 - "dir:static"
 - "dir:contents"
 google_analytics_id: "UA-953592-18"
