Use foundation icons enclosed pack for the link icon.

--- a/site.yaml
+++ b/site.yaml
@@ -5,9 +5,10 @@ packs:
 - "jules:lesscss"
 - "jules:atom"
 - "jules:pygments"
-- "jules:foundation-icons-general"
+- "jules:foundation-icons-general-enclosed"
 - "dir:static"
 - "dir:contents"
 google_analytics_id: "UA-953592-18"
 domain: "www.ironfroggy.com"
 default_author: "Calvin Spealman <ironfroggy@gmail.com>"
+tag_path: "tags/{tag}/"
