--- a/site.yaml
+++ b/site.yaml
@@ -6,6 +6,7 @@ packs:
 - "jules:atom"
 - "jules:pygments"
 - "jules:foundation-icons-general-enclosed"
+- "dir:templates"
 - "dir:static"
 - "dir:contents"
 google_analytics_id: "UA-953592-18"
