--- a/contents/my-personal-essay-project.yaml
+++ b/contents/my-personal-essay-project.yaml
@@ -2,6 +2,7 @@ title: my personal essay project
 publish_time: !!timestamp '2012-06-23 10:00:00'
 created_time: !!timestamp '2012-04-07 21:00:00'
 status: published
+type: post
 tags:
 - musing
 render: jinja2
