--- a/site.yaml
+++ b/site.yaml
@@ -14,3 +14,5 @@ google_analytics_id: "UA-953592-18"
 domain: "www.ironfroggy.com"
 default_author: "Calvin Spealman <ironfroggy@gmail.com>"
 tag_path: "tags/{tag}/"
+disqus:
+    enabled_default: true
