Expanded about page

--- a/contents/about.yaml
+++ b/contents/about.yaml
@@ -10,3 +10,15 @@ content: |
     felt pretty uneasy writing anything. Where was it going? Who am I trusting with my content?
 
     At least it is fun to tinker on.
+
+    So now what?
+    ^^^^^^^^^^^^
+
+    I write about programming at `Developing Upwards <http://developingupwards.com>`_, but in
+    the near future I will *either* migrate that content here or simply off blogspot and onto
+    this server and being built with the same Jules system I use on this.
+
+    I might keep `my Tumblr acccount <http://ironfroggy-reads.tumblr.com>`_ as a convenience
+    tool.
+
+    For now, I'll just see how it all evolves...
