Show any content in the recent list, slightly lighter background, and ignore swap files. Also, by default don't add .html to rendered output, but do add it for the index.html file.

--- a/site.yaml
+++ b/site.yaml
@@ -16,3 +16,9 @@ default_author: "Calvin Spealman <ironfroggy@gmail.com>"
 tag_path: "tags/{tag}/"
 disqus:
     enabled_default: true
+ignore:
+- "*.swp"
+- "*.swo"
+- "~*"
+bundle_defaults:
+    output_ext: ""
