A few minor style changes about dates

--- a/contents/my-personal-essay-project.yaml
+++ b/contents/my-personal-essay-project.yaml
@@ -1,10 +1,12 @@
 title: my personal essay project
 publish_time: !!timestamp '2012-06-23 10:00:00'
+updated_time: !!timestamp '2012-06-23 10:00:00'
 created_time: !!timestamp '2012-04-07 21:00:00'
 status: published
 type: post
 tags:
 - musing
+- writing
 render: jinja2
 template: post.j2
 content: ~/me.git/on-my-personal-essay-project
