--- a/contents/what-i-want-in-a-website.yaml
+++ b/contents/what-i-want-in-a-website.yaml
@@ -1,5 +1,6 @@
 title: "What I want in a Website"
 publish_time: !!timestamp '2012-06-23 11:40:00'
+updated_time: !!timestamp '2012-06-23 11:40:00'
 created_time: !!timestamp '2012-03-04 22:23:00'
 status: published
 type: post
