Add a series to test the new feature and adjust the templates to display this well.

--- a/site.yaml
+++ b/site.yaml
@@ -35,3 +35,6 @@ collections:
         group_by:
             is: series
         order: publish_time
+        meta:
+            render: jinja2
+            template: series.j2
