Fixed settings to use a keypattern to define tag pages as top level

--- a/contents/software/i-am-worried-about-the-future-of-python.yaml
+++ b/contents/software/i-am-worried-about-the-future-of-python.yaml
@@ -6,5 +6,6 @@ tags:
 - python
 - programming
 - community
-updated_time: 2012-09-16 10:49:00
-publish_time: 2012-09-16 10:49:00
+- software
+updated_time: 2012-09-23 12:00:00
+publish_time: 2012-09-23 12:00:00
