--- a/contents/2012/pycarolinas-recap.yaml
+++ b/contents/2012/pycarolinas-recap.yaml
@@ -4,6 +4,7 @@ status: published
 type: post
 rnder: jinja2
 template: post.j2
+tease_length: 500
 created_time: 2012-10-26 17:20:00
 updated_time: 2012-10-26 17:20:00
 publish_time: 2012-10-26 17:20:00
