Added a reference to a pycarolinas post on dzone

--- a/contents/2012/pycarolinas-recap.yaml
+++ b/contents/2012/pycarolinas-recap.yaml
@@ -23,3 +23,6 @@ sidebar_links:
         - headline: Lynn Root
           text: "Community FTW: Kicking off the PyCarolinas Community"
           url: http://www.roguelynn.com/2012/10/21/community-ftw-kicking-of-the-pycarolinas-community/
+        - headline: Javyer Der Derian
+          text: "PyCarolinas 2012: One Python for All the Carolinas" 
+          url: http://architects.dzone.com/articles/pycon-2012-one-python-all
