--- a/contents/workflow/pocket.yaml
+++ b/contents/workflow/pocket.yaml
@@ -5,7 +5,7 @@ created_time: !!timestamp '2012-12-09 22:45:00'
 status: published
 type: post
 template: post.j2
-series: Workflow
+series: workflow
 tags:
 - tools
 - web
