Added changes to allow 'topics' which contain multiple posts, kind of a new way to do series, I guess.

--- a/site.yaml
+++ b/site.yaml
@@ -39,5 +39,14 @@ collections:
         meta:
             render: jinja2
             template: series.j2
+    topic:
+        key_pattern: "on/{value}"
+        match:
+            status: published
+        group_by:
+            is: topic
+        meta:
+            render: jinja2
+            template: topic.j2
 feed_campaign:
     name: "Feed Subscribers"
