--- a/contents/test.yaml
+++ b/contents/test.yaml
@@ -1,10 +1,10 @@
 title: "test Z"
 publish_time: !!timestamp '2012-06-24 15:24:00'
 created_time: !!timestamp '2012-03-04 22:23:00'
+updated_time: !!timestamp '2012-03-04 22:23:00'
 status: draft
 tags:
 - private
 render: jinja2
 template: post.j2
 link_to: http://google.com
-series: test
