Pulled in draft content

--- a/contents/on/web-data-ownership.yaml
+++ b/contents/on/web-data-ownership.yaml
@@ -1,5 +1,8 @@
 title: Data Ownership on the Web
-series_type: stream
 content: |
     This is a big, important topic. I've been thinking about it, and working on plans to deal
     with it, for a while now. Please, tell me what you thnik.
+
+    The web has evolved a lot, both technically and otherwise. It has evolved in how it
+    solves problems and what problems it solves to aim. It has evolved both what it is and
+    why it is.
