--- a/contents/on/web-data-ownership/the-problem.yaml
+++ b/contents/on/web-data-ownership/the-problem.yaml
@@ -1,4 +1,4 @@
-title: "Where We Are and How We Got Here"
+title: "The Problem with Web Data"
 publish_time: !!timestamp '2013-04-09'
 updated_time: !!timestamp '2013-04-09'
 created_time: !!timestamp '2013-04-09'
@@ -7,6 +7,17 @@ type: post
 template: post.j2
 series: on/web-data-ownership
 content: |
-    The web has evolved a lot, both technically and otherwise. It has evolved in how it
-    solves problems and what problems it solves to aim. It has evolved both what it is and
-    why it is.
+    Thinking about the web and publishing and content and data ownership.
+
+    What does it mean to "own" my data in a web-based world? I don't know what this means, but it seems important to me. I should understand things which seem important. I'm not even sure what questions to ask.
+
+    Before the growing responsibilities of "The Web" is for us, owning my data meant the files sat on my own machine. It meant the files were in a format that was either human readable, or documented well enough that alternative tools could read it or convert it. It meant no vendor could die, or change its mind, and make my data useless to me.
+    
+    This isn't the case in the web today.
+
+    On the web, my data sits in a database on a machine someone else owns. They make backups, I hope. The information, even if I am said to own it, sits in a format I do not know and cannot see. Even if I got a copy, I wouldn't know what to do with it. The cloud is the Microsoft Word of our day.
+
+    The location of the data is shifting, in a potential future where IndexedDB is the norm and our web applications are just deployment vectors, but we still work with data sitting on our own machines.  But, after long battles for open formats and documented data, we suddenly are being thrust into a world where all of our own data, on our own machines, is obscured in thousands of tiny web apps with thier own "format" of dumping our data into the browsers storage sandbox. The data is on my machine, but is the data mine?
+
+    We've been fighting for a while to keep access open to our own data on servers, but this time we need to solve the problem before it comes up. We need to make sure we own the data *inside our own browsers* before it gets locked away from us in the first place.
+
