Published part one of web data ownership

--- a/contents/on/web-data-ownership.yaml
+++ b/contents/on/web-data-ownership.yaml
@@ -6,3 +6,7 @@ content: |
     The web has evolved a lot, both technically and otherwise. It has evolved in how it
     solves problems and what problems it solves to aim. It has evolved both what it is and
     why it is.
+
+    I'll be writing for a while on the subject, in chunks. This is kind of an experiment in my
+    ongoing hunt for a better way to write and get my ideas out. Tell me if you think this is
+    a good idea, or complain if it just annoys you.
