Working on splitting ht site up into programming, writing, and personal sections

--- a/site.yaml
+++ b/site.yaml
@@ -22,7 +22,7 @@ ignore:
 - "*.swo"
 - "~*"
 bundle_defaults:
-    output_ext: "html"
+    output_ext: ""
     render: jinja2
 collections:
     tags:
