--- a/contents/2013/plasmid-0.2.0-released.yaml
+++ b/contents/2013/plasmid-0.2.0-released.yaml
@@ -5,13 +5,40 @@ created_time: !!timestamp '2013-08-07 06:08:00'
 status: published
 type: post
 template: post.j2
-series: projects/plasmid/releases
+#series: projects/plasmid/releases
 tags:
 - plasmid
 - programming
 - software
 - javascript
 - indexeddb
+- offline web apps
 content: |
-    
+    Plasmid is an in-browser database and I've been working on it for a few months, talked
+    to many people about it, and finally reached a point where I can release an API stable
+    version.
 
+    There are two main components to Plasmid, developed separately. PlasmidJS is the in-browser
+    database, based on the IndexedDB specification and supports recent versions of Chrome,
+    Firefox, and Internet Explorer. The second component is Plasmid Sync: a backend server
+    that allows users to synchronize their in-browser databases between machines.
+
+    I'm *really* excited about this and I hope to see what people can do with it. There are
+    other projects like this around, most notably the excellent PouchDB project, but I think
+    Plasmid has properties that make it a better fit for many needs.
+
+    Download
+    --------
+
+    This release is PlasmidJS 0.2.0 and is available at Github and on the Plasmid GitHub page.
+
+    `0.2.0 on Github <https://github.com/plasmidhq/plasmid/releases/tag/v0.2.0>`_
+
+    `0.2.0 on the Website <http://plasmidhq.github.com/plasmid/>`_
+
+    Jump Right In
+    -------------
+
+    If you'd like to jump right in, check out the `Getting Started Guide <http://plasmidhq.github.io/plasmid/plasmidjs.html>`_ and then the full `PlasmidJS API Documentation <http://plasmidhq.github.io/plasmid/plasmidjs_api.html>`_.
+
+    
