Committing deploy version at 2013-08-07 18:37

--- a/contents/2013/plasmid-0.2.0-released.yaml
+++ b/contents/2013/plasmid-0.2.0-released.yaml
@@ -41,4 +41,8 @@ content: |
 
     If you'd like to jump right in, check out the `Getting Started Guide <http://plasmidhq.github.io/plasmid/plasmidjs.html>`_ and then the full `PlasmidJS API Documentation <http://plasmidhq.github.io/plasmid/plasmidjs_api.html>`_.
 
+    Want some help or to ask more about the project?
+
+    I'll be in #plasmid on Freenode and you can `ask questons on the mailing list <https://groups.google.com/forum/?fromgroups#!forum/plasmid-database>`_.
+
     
